<resources>
    <string name="app_name">Civil Advocacy</string>
    <string name="dataprovidedby">Data provided by</string>
    <string name="googlecivicinformationapi"><u>Google Civic Information API</u></string>
    <string name="author">© 2021, Sebastian Gembis</string>
    <string name="version">Version 1.0</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
</resources>